--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <main>
     <section class="intro">
       <h2>Bienvenido</h2>
-      <p>Explora la obra de Antoni Llabres Campins: un recorrido visual por la pintura, escultura y pintura con relieve que ha marcado su carrera.</p>
+      <p>Explora la obra de Antoni Llabres Campins: un recorrido visual por la pintura, escultura y más. Aquí podrás descubrir su catálogo y sus próximos proyectos. Si estás interesado en adquirir una obra o si simplemente quieres más información no dudes en rellenar el formulario de contacto.</p>
     </section>
   </main>
   <footer>
