--- a/about.html
+++ b/about.html
@@ -18,7 +18,11 @@
   <main>
     <section class="bio">
       <h1>Biografía</h1>
-      <p>Antoni Llabres Campins nació en Mallorca, comenzó estudios de Arquitectura en Barcelona y regresó a su tierra para dedicarse plenamente al arte. Estudió en la Escuela Libre del Mediterráneo bajo la dirección de Xim Torrens y ha participado en numerosas exposiciones nacionales e internacionales.</p>
+      <p>Llabres Campins (Mallorca, 1986) es un pintor cuya obra se enraíza profundamente en la memoria visual y emocional del Mediterráneo.
+        
+        A través de una paleta vibrante y composiciones evocadoras, Campins explora los vínculos entre paisaje, identidad y tiempo, capturando la esencia cambiante de la isla y sus contrastes entre lo natural y lo construido, lo íntimo y lo colectivo. Graduado en Bellas Artes por la Universidad de Barcelona, ha desarrollado una trayectoria marcada por una búsqueda constante de equilibrio entre tradición pictórica y lenguajes contemporáneos. Su pintura es reconocible por una fuerte carga atmosférica y una sensibilidad por la luz que remite tanto a la pintura postimpresionista como a los silencios de la arquitectura balear.
+        
+        A lo largo de los años, su obra ha sido expuesta en galerías nacionales e internacionales, y forma parte de colecciones públicas y privadas. Vive y trabaja entre Mallorca y otras geografías que nutren su imaginario visual.</p>
     </section>
   </main>
   <footer>
