--- a/index.html
+++ b/index.html
@@ -6,68 +6,47 @@
   <title>Llabrés Campins</title>
   <link rel="stylesheet" href="css/style.css" />
   <style>
-    .dropdown {
-      position: relative;
-      display: inline-block;
-    }
-    .dropdown-content {
-      display: none;
+    .scroll-down {
       position: absolute;
-      background-color: rgba(0, 0, 0, 0.9);
-      min-width: 160px;
-      box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
-      z-index: 1;
-    }
-    .dropdown-content a {
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      text-align: center;
+      cursor: pointer;
+      animation: bounce 2s infinite;
       color: white;
-      padding: 12px 16px;
-      text-decoration: none;
-      display: block;
-    }
-    .dropdown-content a:hover {
-      background-color: rgba(255, 255, 255, 0.1);
-    }
-    .dropdown:hover .dropdown-content {
-      display: block;
     }
 
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 2000;
-      padding-top: 60px;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-      background-color: rgba(0,0,0,0.9);
+    .scroll-down .arrow {
+      width: 24px;
+      height: 24px;
+      border-left: 3px solid white;
+      border-bottom: 3px solid white;
+      transform: rotate(-45deg);
+      margin: 10px auto 0;
     }
-    .modal-content {
-      margin: auto;
-      display: block;
-      max-width: 90%;
-      max-height: 80vh;
+
+    @keyframes bounce {
+      0%, 20%, 50%, 80%, 100% {
+        transform: translateX(-50%) translateY(0);
+      }
+      40% {
+        transform: translateX(-50%) translateY(-10px);
+      }
+      60% {
+        transform: translateX(-50%) translateY(-5px);
+      }
     }
-    .close {
-      position: absolute;
-      top: 30px;
-      right: 35px;
-      color: #f1f1f1;
-      font-size: 40px;
-      font-weight: bold;
-      transition: 0.3s;
-      cursor: pointer;
+
+    .fade-in {
+      opacity: 0;
+      transform: translateY(30px);
+      transition: opacity 0.8s ease-out, transform 0.8s ease-out;
     }
-    .close:hover {
-      color: #bbb;
-    }
-    #caption {
-      margin: auto;
-      display: block;
-      text-align: center;
-      color: #ccc;
-      padding: 10px 0;
+
+    .fade-in.visible {
+      opacity: 1;
+      transform: translateY(0);
     }
   </style>
 </head>
@@ -89,50 +68,82 @@
         </div>
         <a href="contact.html">Contacto</a>
       </nav>
+
+      <!-- Flecha para bajar -->
+      <div class="scroll-down" onclick="scrollToIntro()">
+        <span>Desliza para ver más</span>
+        <div class="arrow"></div>
+      </div>
     </div>
   </header>
+
   <main>
-    <section class="intro">
+    <!-- Sección bienvenida -->
+    <section class="intro fade-in" id="intro">
       <h2>Bienvenido</h2>
-      <p>Explora la obra de Antoni Llabres Campins: un recorrido visual por la pintura, escultura y pintura con relieve que ha marcado su carrera.</p>
+      <p>Explora la obra de Antoni Llabrés Campins: un recorrido visual por la pintura la escultura y mucho más. No dudes en contactar si deseas recibir más información sobre su obra.</p>
+    </section>
+
+    <!-- Obras destacadas -->
+    <section class="gallery fade-in">
+      <h2>Obras destacadas</h2>
+      <div class="grid">
+        <figure>
+          <img src="img/la-merienda.jpg" alt="La Merienda">
+          <figcaption>La Merienda</figcaption>
+        </figure>
+        <figure>
+          <img src="img/corredors.jpg" alt="Corredors">
+          <figcaption>Corredors</figcaption>
+        </figure>
+        <figure>
+          <img src="img/example3.jpg" alt="Obra 3">
+          <figcaption>Obra destacada 3</figcaption>
+        </figure>
+      </div>
+    </section>
+
+    <!-- Biografía con imagen -->
+    <section class="bio-highlight fade-in" style="margin-top: 3rem;">
+      <h2>Sobre el artista</h2>
+      <div style="display: flex; flex-wrap: wrap; align-items: flex-start; gap: 2rem; margin-top: 1.5rem;">
+        <img src="img/pintor.jpg" alt="Antoni Llabrés Campins" style="width: 200px; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.2);" />
+        <div style="flex: 1; min-width: 250px;">
+          <p>Llabres Campins (Mallorca, 1986) es un pintor cuya obra se enraíza profundamente en la memoria visual y emocional del Mediterráneo. A través de una paleta vibrante y composiciones evocadoras, Campins explora los vínculos entre paisaje, identidad y tiempo, capturando la esencia cambiante de la isla y sus contrastes entre lo natural y lo construido, lo íntimo y lo colectivo.
+
+Graduado en Bellas Artes por la Universidad de Barcelona, ha desarrollado una trayectoria marcada por una búsqueda constante de equilibrio entre tradición pictórica y lenguajes contemporáneos. Su pintura es reconocible por una fuerte carga atmosférica y una sensibilidad por la luz que remite tanto a la pintura postimpresionista como a los silencios de la arquitectura balear.
+
+Su obra ha sido expuesta en galerías y centros de arte tanto a nivel nacional como internacional, formando parte de colecciones públicas y privadas. Vive y trabaja entre Mallorca y otras geografías que nutren su imaginario visual.</p>
+        </div>
+      </div>
     </section>
   </main>
+
   <footer>
-    <p>&copy; 2025 Llabres Campins</p>
+    <p>&copy; 2025 Llabrés Campins</p>
   </footer>
 
-  <!-- Modal para imagen -->
-  <div id="modal" class="modal">
-    <span class="close">&times;</span>
-    <img class="modal-content" id="modal-img" />
-    <div id="caption"></div>
-  </div>
-
   <script>
+    function scrollToIntro() {
+      const introSection = document.getElementById("intro");
+      if (introSection) {
+        introSection.scrollIntoView({ behavior: "smooth" });
+      }
+    }
+
     document.addEventListener("DOMContentLoaded", () => {
-      const modal = document.getElementById('modal');
-      const modalImg = document.getElementById('modal-img');
-      const captionText = document.getElementById('caption');
-      const closeBtn = document.querySelector('.close');
+      const elements = document.querySelectorAll('.fade-in');
 
-      document.querySelectorAll('img').forEach(img => {
-        img.style.cursor = 'pointer';
-        img.addEventListener('click', () => {
-          modal.style.display = 'block';
-          modalImg.src = img.src;
-          captionText.textContent = img.alt || '';
+      const observer = new IntersectionObserver(entries => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            entry.target.classList.add('visible');
+            observer.unobserve(entry.target); // animar solo una vez
+          }
         });
-      });
+      }, { threshold: 0.1 });
 
-      closeBtn.onclick = function() {
-        modal.style.display = 'none';
-      }
-
-      modal.onclick = function(event) {
-        if(event.target === modal) {
-          modal.style.display = 'none';
-        }
-      }
+      elements.forEach(el => observer.observe(el));
     });
   </script>
 </body>
